--- a/113512arjun6.md
+++ b/113512arjun6.md
@@ -1,3 +1,9 @@
+##INFO ABOUT FLUTTER
+Flutter is an open-source UI software development kit created by Google.
+ It is used to develop applications for Android, iOS, Linux, Mac, Windows, Google Fuchsia, and the web from a single codebase.
+ The first version of Flutter was known as codename "Sky" and ran on the Android operating system.
+
+
 
 # pothole
 
